// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreatePreview should render CalenderValuePreview with empty value 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400"
    >
      cv.periodLength
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-small-bold StyledProps--color StyledProps--color-grey800"
    >
      
    </p>
  </div>
</div>
`;

exports[`CreatePreview should render CalenderValuePreview with init value 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-tiny-semi StyledProps--color StyledProps--color-grey400"
    >
      cv.periodLength
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-small-bold StyledProps--color StyledProps--color-grey800"
    >
      
    </p>
  </div>
</div>
`;

exports[`CreatePreview should render CreatePreview with empty value 1`] = `<div />`;

exports[`CreatePreview should render CreatePreview with init value 1`] = `<div />`;

exports[`CreatePreview should render LabelAndValue with empty values 1`] = `
<div>
  <div
    class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-baseline StyledProps--flex-justifyContent-flex-start"
  >
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-form-help StyledProps--color StyledProps--color-grey1000"
      style="width: 100px;"
      title=""
    >
      
    </p>
    <p
      class="StyledProps--font StyledProps--main StyledProps--font-variation-body StyledProps--color StyledProps--color-grey1000"
    >
      
    </p>
  </div>
</div>
`;
